--- a/default.html
+++ b/default.html
@@ -10,7 +10,24 @@
   <meta name="author" content="">
 
   <title>SB Admin 2 - Dashboard</title>
-
+	
+<!--===============================================================================================-->
+	<link rel="icon" type="image/png" href="Table_Fixed_Header/images/icons/favicon.ico"/>
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="Table_Fixed_Header/vendor/bootstrap/css/bootstrap.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="Table_Fixed_Header/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="Table_Fixed_Header/vendor/animate/animate.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="Table_Fixed_Header/vendor/select2/select2.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="Table_Fixed_Header/vendor/perfect-scrollbar/perfect-scrollbar.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="Table_Fixed_Header/css/util.css">
+	<link rel="stylesheet" type="text/css" href="Table_Fixed_Header/css/main.css">
+<!--===============================================================================================-->
+	
   <!-- Custom fonts for this template-->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -818,6 +835,26 @@
   });
   </script>
 
+<!--===============================================================================================-->
+	<script src="Table_Fixed_Header/vendor/bootstrap/js/popper.js"></script>
+	<script src="Table_Fixed_Header/vendor/bootstrap/js/bootstrap.min.js"></script>
+<!--===============================================================================================-->
+	<script src="Table_Fixed_Header/vendor/select2/select2.min.js"></script>
+<!--===============================================================================================-->
+	<script src="Table_Fixed_Header/vendor/perfect-scrollbar/perfect-scrollbar.min.js"></script>
+	<script>
+		$('.js-pscroll').each(function(){
+			var ps = new PerfectScrollbar(this);
+			$(window).on('resize', function(){
+				ps.update();
+			})
+		});
+			
+		
+	</script>
+<!--===============================================================================================-->
+	<script src="Table_Fixed_Header/js/main.js"></script>
+	
 </body>
 
 </html>
