--- a/default.html
+++ b/default.html
@@ -424,7 +424,7 @@
           <!-- Content Row -->
 
           <div class="row">
-            <div class="table100 ver1 m-b-110">
+            <div class="table100 ver1 m-b-110" style="width: 100%;">
 					<div class="table100-head">
 						<table>
 							<thead>
