--- a/default.html
+++ b/default.html
@@ -429,9 +429,9 @@
 						<table>
 							<thead>
 								<tr class="row100 head">
-									<th class="cell100 column1">Class name</th>
-									<th class="cell100 column2">Type</th>
-									<th class="cell100 column3">Hours</th>
+									<th class="cell100 column1">Nome</th>
+									<th class="cell100 column2">Prioridade</th>
+									<th class="cell100 column3">Duração</th>
 									<th class="cell100 column4">Trainer</th>
 									<th class="cell100 column5">Spots</th>
 								</tr>
@@ -443,7 +443,7 @@
 						<table>
 							<tbody>
 								<tr class="row100 body">
-									<td class="cell100 column1">Like a butterfly</td>
+									<td class="cell100 column1">Energia3a</td>
 									<td class="cell100 column2">Boxing</td>
 									<td class="cell100 column3">9:00 AM - 11:00 AM</td>
 									<td class="cell100 column4">Aaron Chapman</td>
@@ -451,7 +451,7 @@
 								</tr>
 
 								<tr class="row100 body">
-									<td class="cell100 column1">Mind & Body</td>
+									<td class="cell100 column1">Lixo</td>
 									<td class="cell100 column2">Yoga</td>
 									<td class="cell100 column3">8:00 AM - 9:00 AM</td>
 									<td class="cell100 column4">Adam Stewart</td>
@@ -459,7 +459,7 @@
 								</tr>
 
 								<tr class="row100 body">
-									<td class="cell100 column1">Crit Cardio</td>
+									<td class="cell100 column1">FAVELA 44khz</td>
 									<td class="cell100 column2">Gym</td>
 									<td class="cell100 column3">9:00 AM - 10:00 AM</td>
 									<td class="cell100 column4">Aaron Chapman</td>
@@ -467,7 +467,7 @@
 								</tr>
 
 								<tr class="row100 body">
-									<td class="cell100 column1">Wheel Pose Full Posture</td>
+									<td class="cell100 column1">Chuva</td>
 									<td class="cell100 column2">Yoga</td>
 									<td class="cell100 column3">7:00 AM - 8:30 AM</td>
 									<td class="cell100 column4">Donna Wilson</td>
@@ -475,7 +475,7 @@
 								</tr>
 
 								<tr class="row100 body">
-									<td class="cell100 column1">Playful Dancer's Flow</td>
+									<td class="cell100 column1">Papel1a</td>
 									<td class="cell100 column2">Yoga</td>
 									<td class="cell100 column3">8:00 AM - 9:00 AM</td>
 									<td class="cell100 column4">Donna Wilson</td>
