--- a/default.html
+++ b/default.html
@@ -102,7 +102,7 @@
       <li class="nav-item active">
         <a class="nav-link" href="index.html">
           <i class="fas fa-fw fa-tachometer-alt"></i>
-          <span>Painel de Controle</span></a>
+          <span>Áudios</span></a>
       </li>
 
       <!-- Divider -->
