--- a/default.html
+++ b/default.html
@@ -445,7 +445,7 @@
 								<tr class="row100 body">
 									<td class="cell100 column1">Energia3a</td>
 									<td class="cell100 column2">Boxing</td>
-									<td class="cell100 column3">9:00 AM - 11:00 AM</td>
+									<td class="cell100 column3"><span class="duration">1:15</span></td>
 									<td class="cell100 column4">Aaron Chapman</td>
 									<td class="cell100 column5">10</td>
 								</tr>
@@ -453,7 +453,7 @@
 								<tr class="row100 body">
 									<td class="cell100 column1">Lixo</td>
 									<td class="cell100 column2">Yoga</td>
-									<td class="cell100 column3">8:00 AM - 9:00 AM</td>
+									<td class="cell100 column3"><span class="duration">2:15</span></td>
 									<td class="cell100 column4">Adam Stewart</td>
 									<td class="cell100 column5">15</td>
 								</tr>
@@ -461,7 +461,7 @@
 								<tr class="row100 body">
 									<td class="cell100 column1">FAVELA 44khz</td>
 									<td class="cell100 column2">Gym</td>
-									<td class="cell100 column3">9:00 AM - 10:00 AM</td>
+									<td class="cell100 column3"><span class="duration">1:25</span></td>
 									<td class="cell100 column4">Aaron Chapman</td>
 									<td class="cell100 column5">10</td>
 								</tr>
@@ -469,7 +469,7 @@
 								<tr class="row100 body">
 									<td class="cell100 column1">Chuva</td>
 									<td class="cell100 column2">Yoga</td>
-									<td class="cell100 column3">7:00 AM - 8:30 AM</td>
+									<td class="cell100 column3"><span class="duration">0:31</span></td>
 									<td class="cell100 column4">Donna Wilson</td>
 									<td class="cell100 column5">15</td>
 								</tr>
@@ -477,7 +477,7 @@
 								<tr class="row100 body">
 									<td class="cell100 column1">Papel1a</td>
 									<td class="cell100 column2">Yoga</td>
-									<td class="cell100 column3">8:00 AM - 9:00 AM</td>
+									<td class="cell100 column3"><span class="duration">0:12</span></td>
 									<td class="cell100 column4">Donna Wilson</td>
 									<td class="cell100 column5">10</td>
 								</tr>
@@ -810,6 +810,7 @@
   <script>
 
   var txtTimer = $('#inputTimer');
+  var duration = $('.duration');
   var navTimer = $('#navTimer');
   var iconTimer = $('#iconTimer');
 
@@ -820,7 +821,8 @@
   }
 
   txtTimer.mask('00:00');
-
+  duration.mask('00:00');
+	  
   navTimer.click(function(){
     txtTimer.focus();
   });
