--- a/default.html
+++ b/default.html
@@ -102,7 +102,7 @@
       <li class="nav-item active">
         <a class="nav-link" href="index.html">
           <i class="fas fa-fw fa-tachometer-alt"></i>
-          <span>Áudios</span></a>
+          <span>Painel de Controle</span></a>
       </li>
 
       <!-- Divider -->
@@ -417,7 +417,7 @@
 
           <!-- Page Heading -->
           <div class="d-sm-flex align-items-center justify-content-between mb-4">
-            <h1 class="h3 mb-0 text-gray-800">Painel de Controle</h1>
+            <h1 class="h3 mb-0 text-gray-800">Áudios</h1>
             <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i class="fas fa-download fa-sm text-white-50"></i> Generate Report</a>
           </div>
 
