--- a/default.html
+++ b/default.html
@@ -442,7 +442,18 @@
 							<tbody>
 								<tr class="row100 body">
 									<td class="cell100 column1">Energia3a</td>
-									<td class="cell100 column2">Boxing</td>
+									<td class="cell100 column2">
+									<div class="dropdown">
+  										<button class="btn btn-secondary dropdown-toggle" style="background: none;" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    											Dropdown button
+  										</button>
+										  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+										    <a class="dropdown-item" href="#">Normal</a>
+										    <a class="dropdown-item" href="#">Alta</a>
+										    <a class="dropdown-item" href="#">Imediata</a>
+										  </div>
+										</div>
+									</td>
 									<td class="cell100 column3"><span class="duration">01:15</span></td>
 								</tr>
 
