--- a/default.html
+++ b/default.html
@@ -444,7 +444,7 @@
 									<td class="cell100 column1">Energia3a</td>
 									<td class="cell100 column2">
 									<div class="dropdown">
-  										<button class="btn btn-secondary dropdown-toggle" style="background: none;" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+  										<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     											Dropdown button
   										</button>
 										  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
