--- a/default.html
+++ b/default.html
@@ -444,8 +444,8 @@
 									<td class="cell100 column1">Energia3a</td>
 									<td class="cell100 column2">
 									<div class="dropdown">
-  										<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    											Dropdown button
+  										<button class="btn btn-secondary dropdown-toggle" style="border: none;" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    											Normal
   										</button>
 										  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
 										    <a class="dropdown-item" href="#">Normal</a>
