--- a/default.html
+++ b/default.html
@@ -459,7 +459,17 @@
 
 								<tr class="row100 body">
 									<td class="cell100 column1">Lixo</td>
-									<td class="cell100 column2">Yoga</td>
+									<td class="cell100 column2">
+										<div class="dropdown show">
+										  <a class="btn btn-secondary" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Alta</a>
+
+										  <div class="dropdown-menu show" aria-labelledby="dropdownMenuLink" x-placement="bottom-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(0px, 24px, 0px);">
+										    <a class="dropdown-item" href="#">Normal</a>
+										    <a class="dropdown-item" href="#">Alta</a>
+										    <a class="dropdown-item" href="#">Imediata</a>
+										  </div>
+										</div>
+									</td>
 									<td class="cell100 column3"><span class="duration">02:15</span></td>
 								</tr>
 
