--- a/default.html
+++ b/default.html
@@ -36,6 +36,7 @@
   <!-- Custom styles for this template-->
   <link href="css/sb-admin-2.min.css" rel="stylesheet">
   <style>
+  .
   .slidecontainer {
     width: 70%; /* Width of the outside container */
     margin: 0 auto;
@@ -461,7 +462,7 @@
 									<td class="cell100 column1">Lixo</td>
 									<td class="cell100 column2">
 										<div class="dropdown">
-										  <a class="btn btn-secondary waves-effect waves-light" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="
+										  <a href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="
     width: 100%;
     text-align: left;
     background: none;
